--- a/style.css
+++ b/style.css
@@ -168,3 +168,16 @@ footer {
     text-align: center;
     font-size: 14px;
 }
+
+
+/* media queries*/
+/* ajuste para alterar o plano de fundo quando atingir a largura minima de 700px */
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg)
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg)
+    }
+}
